# geo_rtp_service

./: .gitignore  pyproject.toml  requirements.txt
src/: .env.template  main.py
src/alembic/versions/: 2024_12_22_1630-e2d4016c3e65_create_users_table.py  2024_12_22_1709-dd867373083c_create_access_tokens_table.py
src/api/: __init__.py  schemas.py  work.py
src/api/services/: convert_vba.py  geo.py
src/auth/: __init__.py  actions.py  admin.py  auth_routers.py  backend.py  models.py  schemas.py  strategy.py  transport.py  user_manager.py  users_proxy.py
src/auth/dependencies/: __init__.py  access_tokens.py  users.py
src/cloud/: download.py  services.py  uploader.py
src/core/: config.py  core_router.py
src/core/models/: __init__.py  base.py  db_helper.py
src/core/models/mixins/: ID_intpk_mixin.py
src/google_sheets/: __init__.py  schemas.py  sheets_main.py
src/static/css/: buttons.css  download-style.css  style.css  upload-style.css
src/static/js/: main.js
src/templates/: 404.html  base.html  content.html  downloader.html  gallery.html  login.html  logout.html  navbar.html  photos.html  register.html  snake.html  upload.html
src/tests/: test_api_endpoints.py  test_geo_utils.py
