[tool.poetry]
package-mode=false
[tool.poetry.dependencies]
python ="^3.11"
pydantic = {extras = ["email"], version = "^2.10.2"}
pydantic-settings = "^2.6.1"
fastapi = "^0.115.5"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
aiosqlite = "^0.20.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
orjson = "^3.10.12"
jinja2 = "^3.1.5"
sqladmin = "^0.20.1"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"
pyproj = "^3.7.0"
numpy = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

